// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IndexDeprecations renders Issues and IssueSummary components for each index when there are deprecations 1`] = `
<StatusGroup
  className={null}
  isInitiallyCollapsed={true}
  status={
    <IssueSummary
      className={null}
      issueLevelCounts={
        Object {
          "critical": 2,
          "info": 2,
          "none": 1,
          "warning": 1,
        }
      }
    />
  }
  title="Index Settings"
>
  <div>
    <div
      className="kuiBar"
    >
      <div
        className="kuiBarSection"
      >
        <p
          className="kuiTextTitle"
        >
          index1
        </p>
      </div>
      <div
        className="kuiBarSection"
      >
        <IssueSummary
          className={null}
          issueLevelCounts={
            Object {
              "critical": 2,
              "info": 1,
            }
          }
        />
      </div>
    </div>
    <Issues
      className={null}
      issues={
        Array [
          Object {
            "level": "info",
          },
          Object {
            "level": "critical",
          },
          Object {
            "level": "critical",
          },
        ]
      }
    />
  </div>
  <div>
    <div
      className="kuiBar"
    >
      <div
        className="kuiBarSection"
      >
        <p
          className="kuiTextTitle"
        >
          index2
        </p>
      </div>
      <div
        className="kuiBarSection"
      >
        <IssueSummary
          className={null}
          issueLevelCounts={
            Object {
              "info": 1,
              "none": 1,
              "warning": 1,
            }
          }
        />
      </div>
    </div>
    <Issues
      className={null}
      issues={
        Array [
          Object {
            "level": "warning",
          },
          Object {
            "level": "info",
          },
          Object {
            "level": "none",
          },
        ]
      }
    />
  </div>
</StatusGroup>
`;

exports[`IndexDeprecations renders a success message when there are no deprecations 1`] = `
<StatusGroup
  className={null}
  isInitiallyCollapsed={true}
  status={
    <IssueSummary
      className={null}
      issueLevelCounts={
        Object {
          "critical": 0,
          "info": 0,
          "none": 0,
          "warning": 0,
        }
      }
    />
  }
  title="Index Settings"
>
  <p
    className="kuiText kuiSubduedText"
  >
    No index-level deprecations
  </p>
</StatusGroup>
`;

exports[`IndexDeprecations renders the className property 1`] = `
<StatusGroup
  className="myClass"
  isInitiallyCollapsed={true}
  status={
    <IssueSummary
      className={null}
      issueLevelCounts={
        Object {
          "critical": 0,
          "info": 0,
          "none": 0,
          "warning": 0,
        }
      }
    />
  }
  title="Index Settings"
>
  <p
    className="kuiText kuiSubduedText"
  >
    No index-level deprecations
  </p>
</StatusGroup>
`;
